--- a/PlutoWallet/PlutoWallet.csproj
+++ b/PlutoWallet/PlutoWallet.csproj
@@ -66,6 +66,7 @@
 	  <PackageReference Include="websocketsharp.core" Version="1.0.0" />
 	  <PackageReference Include="Ajuna.NetApi" Version="0.3.3" />
 	  <PackageReference Include="CommunityToolkit.Maui" Version="2.0.0" />
+	  <PackageReference Include="ZXing.Net.Maui.Controls" Version="0.3.0-preview.1" />
 	  <PackageReference Include="ZXing.Net.Maui" Version="0.3.0-preview.1" />
 	</ItemGroup>
 
@@ -86,6 +87,9 @@
 	  <None Remove="Components\ScannerView\" />
 	  <None Remove="Components\ConnectionRequestView\" />
 	  <None Remove="Components\StakingDashboard\" />
+	  <None Remove="ZXing.Net.Maui.Controls" />
+	  <None Remove="Components\UniversalScannerView\" />
+	  <None Remove="Components\MessagePopup\" />
 	</ItemGroup>
 	<ItemGroup>
 	  <MauiImage Remove="Resources\Images\dotnet_bot.svg" />
@@ -130,6 +134,12 @@
 	  <MauiXaml Update="View\SettingsPage.xaml">
 	    <SubType></SubType>
 	  </MauiXaml>
+	  <MauiXaml Update="Components\UniversalScannerView\UniversalScannerView.xaml">
+	    <SubType></SubType>
+	  </MauiXaml>
+	  <MauiXaml Update="Components\MessagePopup\MessagePopupView.xaml">
+	    <SubType></SubType>
+	  </MauiXaml>
 	</ItemGroup>
 	<ItemGroup>
 	  <Folder Include="Constants\" />
@@ -143,6 +153,8 @@
 	  <Folder Include="Components\ScannerView\" />
 	  <Folder Include="Components\ConnectionRequestView\" />
 	  <Folder Include="Components\StakingDashboard\" />
+	  <Folder Include="Components\UniversalScannerView\" />
+	  <Folder Include="Components\MessagePopup\" />
 	</ItemGroup>
 	<!--<PropertyGroup>
 		<CodesignEntitlement>Entitlements.plist</CodesignEntitlement>
