--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Plutonication"]
 	path = Plutonication
 	url = https://github.com/cisar2218/Plutonication
+[submodule "Substrate.NET.API"]
+	path = Substrate.NET.API
+	url = https://github.com/SubstrateGaming/Substrate.NET.API
