--- a/PlutoWallet/PlutoWallet.csproj
+++ b/PlutoWallet/PlutoWallet.csproj
@@ -156,6 +156,11 @@
 	  <None Remove="Resources\Images\NetworkIcons\acala.svg" />
 	  <None Remove="Resources\Images\NetworkIcons\litmus.png" />
 	  <None Remove="Resources\Images\NetworkIcons\shibuya.png" />
+	  <None Remove="Resources\Images\menuwhite.svg" />
+	  <None Remove="Resources\Images\menublack.svg" />
+	  <None Remove="Resources\Images\NetworkIcons\kusamawhite.png" />
+	  <None Remove="Resources\Images\NetworkIcons\substrate.svg" />
+	  <None Remove="Resources\Images\NetworkIcons\westend.svg" />
 	</ItemGroup>
 	<ItemGroup>
 	  <MauiImage Remove="Resources\Images\dotnet_bot.svg" />
@@ -214,6 +219,11 @@
 	  <BundleResource Include="Resources\Images\NetworkIcons\acala.svg" />
 	  <BundleResource Include="Resources\Images\NetworkIcons\litmus.png" />
 	  <BundleResource Include="Resources\Images\NetworkIcons\shibuya.png" />
+	  <BundleResource Include="Resources\Images\menuwhite.svg" />
+	  <BundleResource Include="Resources\Images\menublack.svg" />
+	  <BundleResource Include="Resources\Images\NetworkIcons\kusamawhite.png" />
+	  <BundleResource Include="Resources\Images\NetworkIcons\substrate.svg" />
+	  <BundleResource Include="Resources\Images\NetworkIcons\westend.svg" />
 	</ItemGroup>
 	<ItemGroup>
 	  <MauiXaml Update="View\MnemonicsPage.xaml">
@@ -306,6 +316,12 @@
 	    <SubType></SubType>
 	  </MauiXaml>
 	  <MauiXaml Update="Components\NetworkSelect\NetworkBubbleView.xaml">
+	    <SubType></SubType>
+	  </MauiXaml>
+	  <MauiXaml Update="Components\NetworkSelect\MultiNetworkSelectOptionsView.xaml">
+	    <SubType></SubType>
+	  </MauiXaml>
+	  <MauiXaml Update="Components\NetworkSelect\MultiNetworkSelectOptionView.xaml">
 	    <SubType></SubType>
 	  </MauiXaml>
 	</ItemGroup>
