--- a/PlutoWallet/PlutoWallet.csproj
+++ b/PlutoWallet/PlutoWallet.csproj
@@ -191,6 +191,8 @@
 	  <None Remove="Resources\Images\NetworkIcons\xxnetwork.png" />
 	  <None Remove="Components\NavigationBar\" />
 	  <None Remove="Components\Card\" />
+	  <None Remove="Resources\Images\NetworkIcons\manta.png" />
+	  <None Remove="Resources\Images\NetworkIcons\ajuna.svg" />
 	</ItemGroup>
 	<ItemGroup>
 	  <MauiImage Remove="Resources\Images\dotnet_bot.svg" />
@@ -284,6 +286,8 @@
 	  <BundleResource Include="Resources\Images\NetworkIcons\snow.png" />
 	  <BundleResource Include="Resources\Images\NetworkIcons\vara.png" />
 	  <BundleResource Include="Resources\Images\NetworkIcons\xxnetwork.png" />
+	  <BundleResource Include="Resources\Images\NetworkIcons\manta.png" />
+	  <BundleResource Include="Resources\Images\NetworkIcons\ajuna.svg" />
 	</ItemGroup>
 	<ItemGroup>
 	  <MauiXaml Update="View\MnemonicsPage.xaml">
